# TraviswithC

./: .travis.yml  CMakeLists.txt  LOG011118.txt  README.md  gtest.cmake  main.cpp
